--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,12 +1,11 @@
-upstream masqueunacasa {
-  server unix:/tmp/unicorn.masqueunacasa.sock fail_timeout=0;
+upstream pubhub {
+  server unix:/tmp/unicorn.pubhub.sock fail_timeout=0;
 }
 
 server {
-  listen 80 default deferred;
-  server_name masqueunacasa.net *.masqueunacasa.net masqueunacasa.org
-*.masqueunacasa.org;
-  root /home/deployer/apps/Masqueunacasa/current/public;
+  listen 80;
+  server_name tornado.bookcamping.cc;
+  root /home/deployer/apps/Pubhub/current/public;
 
   location ~* ^/assets/ {
     gzip_static on;
@@ -20,7 +19,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://masqueunacasa;
+    proxy_pass http://pubhub;
   }
 
   error_page 500 502 503 504 /500.html;
