Ficciones nginx. Versiones de escenas

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream pubhub {
 
 server {
   listen 80;
-  server_name tornado.bookcamping.cc;
+  server_name tornado.bookcamping.cc ficciones.bookcamping.cc;
   root /home/deployer/apps/Pubhub/current/public;
 
   location ~* ^/assets/ {
